# db_auto_update

./: Cargo.toml
src/: colors.rs  main.rs
src/database/: connection.rs
src/functions/: functions.rs
src/utils/: colors.rs  connection.rs  mod.rs  print_text.rs
