[package]
name = "dbautobackup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
colored = "2.1.0"
mysql_async = "0.33.0"
rfd = "0.13.0"
tokio = { version = "1.35.1", features = ["full", "fs"] }
