[package]
name = "dbautobackup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
chrono = "0.4.31"
colored = "2.1.0"
console = "0.15.8"
dialoguer = "0.11.0"
futures = "0.3.30"
mysql_async = "0.33.0"
rfd = "0.13.0"
serde = "1.0.196"
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["full", "fs"] }
